Лабораторная работа по JavaScript, оптимизация кода

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
   </head>
   <body>
     <h1 class="portfolio">Визитка</h1>
-    <div class="buttons">
-      <button class="button_myself">О себе</button>
-      <button class="button_labs">Лабораторные работы</button>
+    <div class="buttons" onclick="">
+      <button class="button_myself" id="button_myself">О себе</button>
+      <button class="button_myself" id="button_labs">
+        Лабораторные работы
+      </button>
     </div>
     <div class="wrapper">
       <div class="aboutMe">
